[package]
name = "paranoid-space"
version = "0.1.0"
edition = "2021"

authors = ["Kookyleo <kookyleo@gmail.com>"]
description = "Automatically insert spaces between full-width and half-width characters in certain specific situations."
license = "MIT"
repository = "https://github.com/kookyleo/paranoid-space"

[dependencies]
unicode-width = "0.2.0"
clap = { version = "4.5.4", features = ["derive"] }
