[package]
name = "paranoid-space"
version = "0.1.0"
edition = "2024"

authors = ["Kookyleo <kookyleo@gmail.com>"]
description = "Automatically insert spaces between full-width and half-width characters in certain specific situations."
license = "MIT"
repository = "https://github.com/kookyleo/paranoid-space"

[dependencies]
unicode-width = "0.2.0"
clap = { version = "4.5.4", features = ["derive"] }
regex = "1.11.1"
lazy_static = "1.5.0"
pulldown-cmark = "0.13.0"
html5ever = "0.26.0"
markup5ever = "0.11.0"
kuchiki = "0.8.1"
html-escape = "0.2"
