[package]
name = "paranoid-space"
version = "0.1.0"
edition = "2024"

authors = ["Kookyleo <kookyleo@gmail.com>"]
description = "Automatically insert spaces between full-width and half-width characters in certain specific situations."
license = "MIT"
repository = "https://github.com/kookyleo/paranoid-space"

[dependencies]
unicode-width = "0.2.0"
clap = { version = "4.5.4", features = ["derive"] }
pulldown-cmark = "0.13.0"
html5ever = "0.26.0"
kuchiki = "0.8.1"
html-escape = "0.2"
console = "0.15.8"
pest = "2.8.0"
pest_derive = "2.8.0"
anyhow = "1.0.98"
regex = "1.11.1"
